Fri Jul  8 13:06:09 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* cont.c (FIBER_MACHINE_STACK_ALLOCATION_SIZE): Fiber stack size
	  don't need to keep multiple number of sizeof(VALUE).

Fri Jul  8 11:39:12 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (sudo-precheck): true command is not standard on
	  Windows.

Fri Jul  8 10:39:52 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread_pthread.c (gvl_destroy): fix cond_t leak.

Fri Jul  8 09:17:59 2011  Eric Hodel  <drbrain@segment7.net>

	* gc.c:  Improve documentation

Thu Jul  7 23:35:31 2011  Narihiro Nakamura  <authornari@gmail.com>

	* gc.c: change water_mark value that may call
	  gc_mark(lev <= GC_LEVEL_MAX) in gc_mark().
	  In ruby_stack_check(), water_mark is a value that may call some
	  C function. Fixes Bug #3781

	* configure.in: define GC_MARK_STACKFRAME_WORD that approximate
	  size of gc_mark() and gc_mark_children() stackframes.

Thu Jul  7 17:55:05 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/testunit/test_parallel.rb (TestParallelWorker#teardown): wait
	  the child process even if the communication pipe is broken.

Thu Jul  7 15:44:42 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* encoding.c (rb_enc_set_index, rb_enc_associate_index): should
	  check if frozen.

	* parse.y (rb_intern3), ruby.c (process_options, ruby_script):
	  defer freezing after associating encodings.

Thu Jul  7 15:16:51 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* numeric.c (rb_num2ull): use own switch sentence.
	  Current implementation can't convert 18446744073709551615.

Thu Jul  7 06:56:15 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* cont.c (FIBER_STACK_FLAGS): workaround fix for r32420 on FreeBSD.

Thu Jul  7 06:46:12 2011  Eric Hodel  <drbrain@segment7.net>

	* benchmark/driver.rb:  Add difference column to report that averages
	  across all runs of a benchmark.  [Ruby 1.9 - Feature #4982]

Thu Jul  7 06:19:38 2011  Eric Hodel  <drbrain@segment7.net>
